--- a/chat/.env.example
+++ b/chat/.env.example
@@ -12,7 +12,7 @@ DB_DATABASE=chat
 DB_USERNAME=root
 DB_PASSWORD=root
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
@@ -28,6 +28,6 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=416995
+PUSHER_APP_KEY=d9cbacd0c5240a419bd8
+PUSHER_APP_SECRET=516772dd5847876b53cc
